fix: - add full layout component - wrap company page in full layout component

--- a/components/Common/PhotoGallery/DesktopCarousel/styles.module.scss
+++ b/components/Common/PhotoGallery/DesktopCarousel/styles.module.scss
@@ -5,7 +5,7 @@
   background-color: $white;
   flex-wrap: wrap;
   max-height: 100vh;
-  padding: 200px 0;
+  padding: 200px 0 200px;
   z-index: 1;
   overflow: hidden;
 
