--- a/components/CompanyCommon/AboutUs/styles.module.scss
+++ b/components/CompanyCommon/AboutUs/styles.module.scss
@@ -3,35 +3,14 @@
 .aboutUs {
   position: relative;
   z-index: 2;
-  padding-bottom: 100px;
+  padding: 100px 0;
   width: 100%;
   height: auto;
-  margin-top: 81px;
 
   @include flex(row, space-between, center, wrap);
 
   @include ultra-hd {
-    margin-top: 160px;
     max-width: $max-content-width;
-  }
-
-  @include full-hd {
-    margin-top: 81px;
-    height: calc(100vh - 81px);
-  }
-
-  @include macbook-fifteen {
-    margin-top: 9.47vw;
-    height: auto;
-  }
-
-  @include desktop {
-    padding-top: 30px;
-    height: auto;
-  }
-
-  @include macbook-twelve {
-    margin-top: 8vw;
   }
 
   @include tablet {
