--- a/components/CompanyCommon/WhatMakesUsSpecial/styles.module.scss
+++ b/components/CompanyCommon/WhatMakesUsSpecial/styles.module.scss
@@ -3,8 +3,7 @@
 .makingUsSpecial {
   position: relative;
   z-index: 2;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 100px 0;
   width: 100%;
 
   @include flex(column, space-around, flex-start);
