--- a/containers/Company/styles.module.scss
+++ b/containers/Company/styles.module.scss
@@ -3,19 +3,10 @@
 .companyContainer {
   position: relative;
   z-index: 2;
-  padding: 0 80px;
   background-color: $white;
   overflow-x: hidden;
 
   @include flex(column, center, center);
-
-  @include tablet {
-    padding: calc(81px + 40px) 40px 0;
-  }
-
-  @include phone {
-    padding: 66px $side-indent 0;
-  }
 }
 
 .companyReviews {
@@ -25,7 +16,7 @@
   & > div {
     width: 100%;
     margin: 0 auto;
-    padding: 100px 80px 130px;
+    padding: 100px 80px 100px;
 
     @include ultra-hd {
       max-width: $max-content-width;
@@ -49,13 +40,13 @@
 }
 
 .companyBottom {
-  padding: 0 80px 200px;
+  padding: 30px 0 100px;
   background-color: $white;
 
   @include flex(column, center, center);
 
   @include tablet {
-    padding: 100px 40px 200px;
+    padding: 100px 40px 100px;
   }
 
   @include below-tablet {
@@ -63,6 +54,6 @@
   }
 
   @include phone {
-    padding: 60px $side-indent 100px;
+    padding: 60px $side-indent;
   }
 }
